--- a/2.Sources/css/habh.css
+++ b/2.Sources/css/habh.css
@@ -117,7 +117,7 @@ a:hover{
 }
 #left-content{
 	float:left;
-	width:700px;
+	width:56p%;
 	height:100%;
 	background-color:white;
 	border:1px solid #ddd;
@@ -145,7 +145,7 @@ a:hover{
 }
 #right-content{
 	float:left;
-	width:480px;
+	width:38%;
 	height:500px;
 	margin-left:30px;
 	background-color:white;
@@ -157,7 +157,7 @@ a:hover{
 .new-song{
 	background-color:#555;
 	color:white;
-	width: 450px;
+	width: 93%;
 	height:30px;
 	font-size:20px;
 	text-align:center;
