--- a/2.Sources/css/habh.css
+++ b/2.Sources/css/habh.css
@@ -117,7 +117,7 @@ a:hover{
 }
 #left-content{
 	float:left;
-	width:56p%;
+	width:56%;
 	height:100%;
 	background-color:white;
 	border:1px solid #ddd;
