--- a/2.Sources/css/habh.css
+++ b/2.Sources/css/habh.css
@@ -146,7 +146,7 @@ a:hover{
 #right-content{
 	float:left;
 	width:38%;
-	height:800px;
+	height:100%;
 	margin-left:30px;
 	background-color:white;
 	font-family:Arial;
