--- a/2.Sources/css/song.css
+++ b/2.Sources/css/song.css
@@ -16,7 +16,8 @@
 }
 .ha-content{
     margin-top:60px;
-    height:800px;
+    height:400px;
+    overflow:scroll;
     padding:20px;
     text-align:justify;
 }
