--- a/2.Sources/hopam/css/song.css
+++ b/2.Sources/hopam/css/song.css
@@ -63,7 +63,7 @@ a{color:black;}
 #right-content{
 	float:left;
 	width:36%;
-	height:500px;
+	height:100%;
 	margin-left:30px;
 	background-color:white;
 	font-family:Arial;
